--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     aside:has(~:target),main:not(:target) {display:none;}
     concertina-keyboard {
         border:.1rem solid;
-        font-size:.8em;
+        font-size:1em;
     }
 </style>
 
