--- a/index.html
+++ b/index.html
@@ -3,12 +3,15 @@
 <meta name="viewport" content="width=device-width,initial-scale=1">
 <title>Scales</title>
 <script src="https://cdn.jsdelivr.net/npm/tonal/browser/tonal.min.js"></script>
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Gentium+Book+Plus&display=swap" rel="stylesheet">
 <style>
     @font-face {
         font-family: Bravura;
         src: url('./Bravura.woff2');
     }
-    body {font-family:sans-serif;}
+    body {font-family: "Gentium Book Plus", serif;}
     nav {
         text-align:center;
         margin-bottom:1em;
